--- a/Pragma.Framework/Pragma.Forms.Controls/Pragma.Forms.Controls.csproj
+++ b/Pragma.Framework/Pragma.Forms.Controls/Pragma.Forms.Controls.csproj
@@ -47,6 +47,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Reactive.Core, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
@@ -178,9 +179,17 @@
       <Project>{379E2087-05CA-42B5-B7CB-C9F3E0D9882D}</Project>
       <Name>Pragma.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Pragma.Excel\Pragma.Excel.csproj">
+      <Project>{CAA6579A-800E-4B62-8065-2F71EFACA93E}</Project>
+      <Name>Pragma.Excel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Pragma.Extensions\Pragma.Extensions.csproj">
       <Project>{BAA712F4-1F97-4DE6-97E3-F93A374FD635}</Project>
       <Name>Pragma.Extensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Pragma.Files\Pragma.Files.csproj">
+      <Project>{0BAE336E-CBE1-44E7-8A0E-D621AB974A12}</Project>
+      <Name>Pragma.Files</Name>
     </ProjectReference>
     <ProjectReference Include="..\Pragma.Forms.ControlBinding\Pragma.Forms.ControlBinding.csproj">
       <Project>{457eb5c5-144b-43b5-be00-ab1be9c3f8b9}</Project>
