--- a/Pragma.Framework/Pragma.System.Models/Pragma.App.Models.csproj
+++ b/Pragma.Framework/Pragma.System.Models/Pragma.App.Models.csproj
@@ -56,6 +56,10 @@
       <Project>{379E2087-05CA-42B5-B7CB-C9F3E0D9882D}</Project>
       <Name>Pragma.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Pragma.Forms.Controls\Pragma.Forms.Controls.csproj">
+      <Project>{DE0AD088-613D-4AC5-AF9D-5AE0FB5BE14B}</Project>
+      <Name>Pragma.Forms.Controls</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
