--- a/Source/CSharp/Pragma.Apps/Pragma.App.Forms/Config/connection-strings.config
+++ b/Source/CSharp/Pragma.Apps/Pragma.App.Forms/Config/connection-strings.config
@@ -2,6 +2,6 @@
 <connectionStrings>
   
   <!--  Release connections -->
-  <add name="homol"    connectionString="Data Source=localhost; Initial Catalog=Courses; persist security info=True; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-  
+  <add name="homol"    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Git\PersonalFramework\Source\CSharp\Pragma.Apps\Pragma.App.Forms\Data\DataBase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    
 </connectionStrings>
