--- a/Source/CSharp/Pragma.Apps/Pragma.App.DAO/Pragma.App.DAO.csproj
+++ b/Source/CSharp/Pragma.Apps/Pragma.App.DAO/Pragma.App.DAO.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionData.cs" />
-    <Compile Include="Contexts\InvestContext.cs" />
+    <Compile Include="Contexts\MainContext.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AuthorRepository.cs" />
