--- a/Source/CSharp/Pragma.Apps/Pragma.App.Forms/Config/connection-strings.config
+++ b/Source/CSharp/Pragma.Apps/Pragma.App.Forms/Config/connection-strings.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <connectionStrings>
-  
+  <clear/>
   <!--  Release connections -->
-  <add name="homol"    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Git\PersonalFramework\Source\CSharp\Pragma.Apps\Pragma.App.Forms\Data\DataBase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="default"    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\Git\PersonalFramework\Source\CSharp\Pragma.Apps\Pragma.App.Forms\Data\DataBase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     
 </connectionStrings>
