--- a/Source/CSharp/Pragma.Framework/Pragma.Core/Pragma.Core.csproj
+++ b/Source/CSharp/Pragma.Framework/Pragma.Core/Pragma.Core.csproj
@@ -297,8 +297,8 @@
     <Compile Include="POCO\FluentLambda.cs" />
     <Compile Include="POCO\ModelFormat.cs" />
     <Compile Include="POCO\OperationResult.cs" />
-    <Compile Include="POCO\PragmaImage.cs" />
-    <Compile Include="POCO\PragmaColor.cs" />
+    <Compile Include="POCO\ImageTool.cs" />
+    <Compile Include="POCO\ColorTool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
