correções em layout

--- a/Source/CSharp/Pragma.Apps/Pragma.App.Forms/Config/connection-strings.config
+++ b/Source/CSharp/Pragma.Apps/Pragma.App.Forms/Config/connection-strings.config
@@ -2,6 +2,6 @@
 <connectionStrings>
   <clear/>
   <!--  Release connections -->
-  <add name="default"    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\Git\PersonalFramework\Source\CSharp\Pragma.Apps\Pragma.App.Forms\Data\DataBase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="default"    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Data\DataBase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     
 </connectionStrings>
