correção em copy de database

--- a/Source/CSharp/Pragma.Apps/Pragma.App.Forms/Pragma.App.Forms.csproj
+++ b/Source/CSharp/Pragma.Apps/Pragma.App.Forms/Pragma.App.Forms.csproj
@@ -285,11 +285,11 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Data\DataBase.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\DataBase_log.ldf">
       <DependentUpon>DataBase.mdf</DependentUpon>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
