--- a/Source/CSharp/Nextify.Apps/Nextify.App.DAO/Nextify.App.DAO.csproj
+++ b/Source/CSharp/Nextify.Apps/Nextify.App.DAO/Nextify.App.DAO.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AuthorRepository.cs" />
     <Compile Include="Repositories\CoursesRepository.cs" />
-    <Compile Include="UnityOfWorks\TestUnityOfWork.cs" />
+    <Compile Include="UnityOfWorks\CourseUnityOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Abstraction\" />
