--- a/Source/CSharp/Nextify.Apps/Nextify.App.Forms.Controllers/Nextify.App.Forms.Controllers.csproj
+++ b/Source/CSharp/Nextify.Apps/Nextify.App.Forms.Controllers/Nextify.App.Forms.Controllers.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Combos\ConnectionComboController.cs" />
+    <Compile Include="Grids\AuthorGridController.cs" />
     <Compile Include="Grids\CourseGridController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
