--- a/Source/CSharp/Nextify.Apps/Nextify.App.Forms/Nextify.App.Forms.csproj
+++ b/Source/CSharp/Nextify.Apps/Nextify.App.Forms/Nextify.App.Forms.csproj
@@ -111,6 +111,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorConsult.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AuthorConsult.Designer.cs">
+      <DependentUpon>AuthorConsult.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AuthorEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AuthorEdit.Designer.cs">
+      <DependentUpon>AuthorEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="CoursesConsult.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +156,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sys\Startup.cs" />
+    <EmbeddedResource Include="AuthorConsult.resx">
+      <DependentUpon>AuthorConsult.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AuthorEdit.resx">
+      <DependentUpon>AuthorEdit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CoursesConsult.resx">
       <DependentUpon>CoursesConsult.cs</DependentUpon>
     </EmbeddedResource>
