Cadastros de exemplo

--- a/Source/CSharp/Nextify.Apps/Nextify.App.Business/Nextify.App.Business.csproj
+++ b/Source/CSharp/Nextify.Apps/Nextify.App.Business/Nextify.App.Business.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TagBusiness.cs" />
     <Compile Include="AuthorBusiness.cs" />
     <Compile Include="CoursesBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
