--- a/Source/CSharp/Nextify.Apps/Nextify.App.DAO/Nextify.App.DAO.csproj
+++ b/Source/CSharp/Nextify.Apps/Nextify.App.DAO/Nextify.App.DAO.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Contexts\MainContext.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\TagRepository.cs" />
     <Compile Include="Repositories\AuthorRepository.cs" />
     <Compile Include="Repositories\CoursesRepository.cs" />
     <Compile Include="UnityOfWorks\CourseUnityOfWork.cs" />
