--- a/Source/CSharp/Nextify.Apps/Nextify.App.Forms.Controllers/Nextify.App.Forms.Controllers.csproj
+++ b/Source/CSharp/Nextify.Apps/Nextify.App.Forms.Controllers/Nextify.App.Forms.Controllers.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Combos\ConnectionComboController.cs" />
+    <Compile Include="F4\AuthorF4Controller.cs" />
     <Compile Include="Grids\TagGridController.cs" />
     <Compile Include="Grids\AuthorGridController.cs" />
     <Compile Include="Grids\CourseGridController.cs" />
@@ -121,7 +122,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="F4\" />
     <Folder Include="ItemsContainer\" />
   </ItemGroup>
   <ItemGroup>
