add ViewModelBinder reference from nuget

--- a/Source/CSharp/Nextify.Framework/Nextify.Forms.Controllers/Nextify.Forms.Controllers.csproj
+++ b/Source/CSharp/Nextify.Framework/Nextify.Forms.Controllers/Nextify.Forms.Controllers.csproj
@@ -46,6 +46,14 @@
       <HintPath>..\..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Fonts.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ModelViewBinder, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ModelViewBinder.Forms.1.0.7\lib\net45\ModelViewBinder.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ModelViewBinder.Forms, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ModelViewBinder.Forms.1.0.7\lib\net45\ModelViewBinder.Forms.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -105,10 +113,6 @@
     <ProjectReference Include="..\..\Nextify.Apps\Nextify.App.Models\Nextify.App.Models.csproj">
       <Project>{7C95EE61-AB2A-4230-8495-8E5547CD65E7}</Project>
       <Name>Nextify.App.Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ModelViewBinder\ModelViewBinder.csproj">
-      <Project>{a2b77554-a658-48b4-8b03-6ab7d52c79b5}</Project>
-      <Name>ModelViewBinder</Name>
     </ProjectReference>
     <ProjectReference Include="..\Nextify.Abstractions\Nextify.Abstraction.csproj">
       <Project>{D9254CC8-A1EB-4A8D-93FB-C79478AFE1B4}</Project>
