--- a/Source/CSharp/Nextify.Apps/Nextify.App.Binding/Nextify.App.Binding.csproj
+++ b/Source/CSharp/Nextify.Apps/Nextify.App.Binding/Nextify.App.Binding.csproj
@@ -38,6 +38,14 @@
       <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ModelViewBinder, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ModelViewBinder.Forms.1.0.7\lib\net45\ModelViewBinder.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ModelViewBinder.Forms, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ModelViewBinder.Forms.1.0.7\lib\net45\ModelViewBinder.Forms.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -64,10 +72,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Nextify.Framework\ModelViewBinder\ModelViewBinder.csproj">
-      <Project>{a2b77554-a658-48b4-8b03-6ab7d52c79b5}</Project>
-      <Name>ModelViewBinder</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Nextify.Framework\Nextify.Abstractions\Nextify.Abstraction.csproj">
       <Project>{D9254CC8-A1EB-4A8D-93FB-C79478AFE1B4}</Project>
       <Name>Nextify.Abstraction</Name>
