--- a/Source/CSharp/Nextify.Apps/Nextify.App.Binding/packages.config
+++ b/Source/CSharp/Nextify.Apps/Nextify.App.Binding/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="ModelViewBinder" version="1.0.10" targetFramework="net461" />
+  <package id="ModelViewBinder.Forms" version="1.0.7" targetFramework="net461" />
 </packages>
