--- a/Source/CSharp/Nextify.Apps/Nextify.App.Forms.Controllers/Nextify.App.Forms.Controllers.csproj
+++ b/Source/CSharp/Nextify.Apps/Nextify.App.Forms.Controllers/Nextify.App.Forms.Controllers.csproj
@@ -42,6 +42,10 @@
       <HintPath>..\..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Fonts.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ModelViewBinder, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ModelViewBinder.1.0.10\lib\net45\ModelViewBinder.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
