--- a/Source/CSharp/Nextify.Apps/Nextify.App.Forms/packages.config
+++ b/Source/CSharp/Nextify.Apps/Nextify.App.Forms/packages.config
@@ -4,6 +4,7 @@
   <package id="FluentScheduler" version="5.1.3" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net461" />
+  <package id="ModelViewBinder" version="1.0.10" targetFramework="net461" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net461" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
