--- a/Source/CSharp/Nextify.Framework/Nextify.Abstractions/Nextify.Abstraction.csproj
+++ b/Source/CSharp/Nextify.Framework/Nextify.Abstractions/Nextify.Abstraction.csproj
@@ -51,6 +51,10 @@
       <HintPath>..\..\packages\FluentValidation.6.2.1.0\lib\Net45\FluentValidation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ModelViewBinder, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ModelViewBinder.1.0.10\lib\net45\ModelViewBinder.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -112,12 +116,6 @@
     <Compile Include="Tools\IExcelTool.cs" />
     <Compile Include="Tools\ILogger.cs" />
     <Compile Include="Tools\IScheduleManager.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ModelViewBinder\ModelViewBinder.csproj">
-      <Project>{a2b77554-a658-48b4-8b03-6ab7d52c79b5}</Project>
-      <Name>ModelViewBinder</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
