--- a/Source/CSharp/Nextify.Framework/Nextify.Abstractions/packages.config
+++ b/Source/CSharp/Nextify.Framework/Nextify.Abstractions/packages.config
@@ -8,5 +8,6 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
+  <package id="ModelViewBinder" version="1.0.10" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
 </packages>
