--- a/Source/CSharp/Nextify.Framework/Nextify.Forms.Controllers/packages.config
+++ b/Source/CSharp/Nextify.Framework/Nextify.Forms.Controllers/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Equin.ApplicationFramework.BindingListView" version="1.4.5222.35545" targetFramework="net461" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net461" />
+  <package id="ModelViewBinder" version="1.0.10" targetFramework="net461" />
+  <package id="ModelViewBinder.Forms" version="1.0.7" targetFramework="net461" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net461" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
