--- a/Source/CSharp/Nextify.Framework/Nextify.Forms.Controls/packages.config
+++ b/Source/CSharp/Nextify.Framework/Nextify.Forms.Controls/packages.config
@@ -3,6 +3,7 @@
   <package id="Equin.ApplicationFramework.BindingListView" version="1.4.5222.35545" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net461" />
+  <package id="ModelViewBinder" version="1.0.10" targetFramework="net461" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net461" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
